# learn-rust

./: .gitignore  Cargo.toml  LICENSE
code/cargo-new/src/: main.rs
code/grammar/: Cargo.toml
code/grammar/src/: closures.rs  variables.rs
code/guessing_game/src/: main.rs
code/json-demo/: Cargo.toml
code/json-demo/data/: china_science.json
code/json_demo/: Cargo.toml
code/json_demo/data/: china_science_output.json
code/json_demo/src/: main.rs
code/rust-jwt-example/: Cargo.toml  Dockerfile
code/rust-jwt-example/src/: auth.rs  error.rs  main.rs
code/tokio-demo/: Cargo.toml
code/tokio-demo/src/: demo.rs  server.rs
code/tokio_demo/: Cargo.toml
code/tokio_demo/src/: axum.rs  client.rs  macro.rs
code/toml-demo/: Cargo.toml  README.md
code/toml-demo/data/: config.toml
code/toml-demo/src/: main.rs
code/toml_demo/: Cargo.toml  README.md
code/toml_demo/data/: toml_crate.toml
code/variables/src/: main.rs
doc/: cargo.md
