[package]
name = "rust-jwt-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.2.0"
tokio = { version = "1.35.1", features = ["full"] }
warp = "0.3"
serde = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"
chrono = "0.4.31"