[package]
name = "tokio-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures = "0.3.30"
# features=["full"]
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
axum = "0.7.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
serde = { version = "1.0.194", features = ["derive"] }

[[bin]]
name = "server"
path = "src/server.rs"
[[bin]]
name = "client"
path = "src/client.rs"
[[bin]]
name = "demo"
path = "src/demo.rs"
[[bin]]
name = "macro"
path = "src/macro.rs"
[[bin]]
name = "axum"
path = "src/axum.rs"
